# lazyfav.rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
