[package]
name = "lazyfav"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
dirs = "6.0.0"
open = "5.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
